app/blocks/photo-preview/photo-preview.scss
@import '../../node_modules/cropperjs/src/css/cropper.scss';

.photo-preview {
  $b: &;

  position: relative;
  display: block;
  width: 100%;
  box-sizing: border-box;

  &::before,&::after {
    @include pseudo;

    visibility: hidden;
  }

  &::before {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: $color-black;
    opacity: .5;
    z-index: 5;
  }

  &::after {
    top: 50%;
    left: 50%;
    width: 30px;
    height: 30px;
    border-radius: 50%;
    box-sizing: border-box;
    border: 2px solid $color-white;
    z-index: 6;
    transform: translate3d(-50%, -50%, 0);
    animation: pulseShift 1.5s ease-in-out infinite;
  }

  &.is-load {
    &::before,&::after {
      visibility: visible;
    }
  }

  &__delete {
    position: absolute;
    display: block;
    top: 0;
    right: 0;
    width: 32px;
    height: 32px;
    opacity: 0;
    background-color: rgba($color-hint-bg, .57);
    transition: background $ease-main, opacity $ease-main;
    z-index: 4;

    &:hover {
      background-color: $color-hint-bg;
    }

    #{$b}:hover & {
      opacity: 1;
    }

    #{$b}.is-error & {
      opacity: 1;
      background-color: transparent;

      &:hover {
        background-color: rgba($color-hint-bg, .2);
      }
    }

    &-icon {
      position: absolute;
      top: 50%;
      left: 50%;
      width: 16px;
      height: 16px;
      transform: translate3d(-50%, -50%, 0);
      fill: $color-white;
    }
  }

  &__main {
    display: none;
  }

  &__preview {
    position: relative;
    display: block;
    width: 100%;
    padding-top: 100%;
    background-color: $color-bg;
    transition: border $ease-main;
    box-sizing: border-box;
    pointer-events: none;
    overflow: hidden;
    border: 1px solid transparent;

    #{$b}:hover & {
      border-color: $color-form-border;
    }
  }

  &__media,&__caption,&__croparea,&__label,&__error {
    position: absolute;
    z-index: 2;
  }

  &__media {
    top: 0;
    left: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    pointer-events: auto;
  }

  &__image {
    max-width: 100%;
    max-height: 100%;
    display: block;
    font-size: 0;
    line-height: 0;
    flex: none;
  }

  &__label {
    @include text-big;

    bottom: 0;
    left: 0;
    cursor: pointer;
    display: block;
    width: 100%;
    padding: 10px 5px;
    box-sizing: border-box;
    background-color: rgba($color-hint-bg, .7);
    text-align: center;
    opacity: 0;
    transition: opacity $ease-main, background $ease-main;
    line-height: 1.2;
    pointer-events: none;

    @include screen('sm') {
      @include text16;

      line-height: 1.2;
    }

    &:hover {
      background-color: rgba($color-hint-bg, 1);
    }

    #{$b}:hover & {
      opacity: 1;
      pointer-events: auto;
    }

    #{$b}__main:checked ~ &,#{$b}.is-error:hover & {
      opacity: 0;
      pointer-events: none;
    }

    .link {
      color: $color-white;
    }
  }

  &__caption {
    @include text-big;

    display: block;
    top: 0;
    left: 0;
    width: 100%;
    padding: 4px 5px;
    box-sizing: border-box;
    font-weight: 700;
    color: $color-white;
    text-align: center;
    background-color: $color-main-photo;
    opacity: 0;
    transition: opacity $ease-main;
    z-index: 3;

    @include screen('sm') {
      @include text16;
    }

    #{$b}__main:checked ~ & {
      opacity: 1;
    }

    #{$b}.is-error {
      opacity: 0;
    }
  }

  &__error {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-start;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    opacity: 0;
    transition: opacity $ease-main;
    z-index: 3;
    background-color: rgba($color-yellow-mask, .9);
    overflow: hidden;
    pointer-events: none;
    box-sizing: border-box;
    color: $color-white;
    padding: 58px 30px 32px;

    @include screen('lg') {
      padding: 40px 20px 30px;
    }

    @include screen('sm') {
      padding: 30px 10px 15px;
    }

    #{$b}.is-error & {
      opacity: 1;
      pointer-events: auto;
    }

    .button {
      @include heading-4;

      background-image: none;
      background-color: $color-white;
      color: $color-white;
      line-height: (26 / 20);
      font-weight: 700;

      @include screen('sm') {
        @include text-mid;
      }

      &__text {
        background-color: $color-yellow-mask;
      }

      &:hover {
        color: $color-basic;
      }
    }

    &-description {
      @include heading-4;

      font-weight: 700;
      width: 100%;
      display: block;
      box-sizing: border-box;

      @include screen('sm') {
        @include text16;
      }

      &:not(:last-child) {
        margin-bottom: 10px;
      }
    }

    &-text {
      display: inline-block;
      box-sizing: border-box;
      padding: 0 8px;

      @include screen('md') {
        padding: 0 4px;
      }
    }
  }

  &__condition {
    display: inline-block;
    padding: 0 8px;
    background-color: $color-selection-text;
    box-sizing: border-box;
    line-height: (27 / 20);

    @include screen('md') {
      padding: 0 4px;
    }

    &:not(:first-child) {
      margin-top: 21px;

      @include screen('lg') {
        margin-top: 15px;
      }

      @include screen('sm') {
        margin-top: 10px;
      }
    }

    @include screen('sm') {
      line-height: (27 / 16);
    }

    &_small {
      @include text15;

      line-height: (27 / 15);

      @include screen('sm') {
        @include text12;

        line-height: (27 / 12);
      }
    }
  }

  &__croparea {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    box-sizing: border-box;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    opacity: 0;
    transition: opacity $ease-main;
    pointer-events: none;

    #{$b}__main:checked ~ & {
      opacity: 0;
    }
  }

  .cropper {
    &-view-box {
      outline: 3px dotted $color-white;
      box-shadow: 1px 1px 0 $color-shadow;

      &::before, &::after {
        @include text;

        font-family: $font-main;
        display: inline-block;
        position: absolute;
        content: 'Cropped area';
        text-align: center;
        box-sizing: border-box;
        width: 100%;
        color: $color-white;
        line-height: (26 / 14);
        z-index: 3;

        @include screen('sm') {
          @include text10;

          line-height: (26 / 14);
        }
      }

      &::before {
        bottom: 100%;
        left: 0;
        padding-bottom: 11px;

        @include screen('sm') {
          padding-bottom: 5px;
        }
      }

      &::after {
        top: 100%;
        left: 0;
        padding-top: 11px;

        @include screen('sm') {
          padding-top: 5px;
        }
      }
    }

    &-modal {
      background-color: $color-hint-bg;
      opacity: .63;
    }
  }

  // .cropper-container {
  //   position: absolute;
  //   top: 0;
  //   left: 0;
  //   width: 100%;
  //   height: 100%;
  // }

  &__area {
    position: relative;
    display: block;
    width: 100%;
    padding-top: 50.3%;

    &::before,&::after {
      @include pseudo;

      width: 100%;
      height: 100%;
      left: 0;
      background-color: rgba($color-hint-bg, .63);
      border: 3px dotted $color-white;
      box-shadow: 1px 1px 0 $color-shadow;
      border-left-width: 0;
      border-right-width: 0;
    }

    &::before {
      top: 100%;
    }

    &::after {
      bottom: 100%;
    }
  }

  &__hint {
    @include text;

    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    box-sizing: border-box;
    width: 100%;
    padding: 0 5px;
    color: $color-white;
    line-height: (26 / 14);
    z-index: 3;
    flex: 1;

    @include screen('sm') {
      @include text10;

      line-height: (26 / 14);
    }

    &_pt {
      #{$b}__hint-text {
        padding-top: 34px;
      }
    }

    &-text {
      display: inline-block;
      text-align: center;
      box-sizing: border-box;
      max-width: 100%;
      padding: 5px 0;
    }
  }

  &__description {
    position: relative;
    width: 100%;

    &:not(:first-child) {
      margin-top: 8px;
    }

    .choices.is-open {
      z-index: 5;
    }
  }
}

